# max_opt_vit

./: .clang-format  .clang-format.yaml  .gitignore  CMakeLists.txt  README.md
gallery/: .pre-commit-config.yaml  README.md  pytest.ini  setup.py
gallery/example/: double_digit.py
gallery/models/maxvit/: maxvit.py
gallery/tests/: test_double_digit.py  test_example_double_digit.py
tutorial/: CMakeLists.txt  README.md
tutorial/hello_cuda/: CMakeLists.txt  main.cu
tutorial/hello_cuda_with_gtest/: CMakeLists.txt  README.md
tutorial/hello_cuda_with_gtest/src/: hello_cuda.cu  main.cu
tutorial/hello_cuda_with_gtest/tests/: test_launch_kernel.cpp
tutorial/project_root/: CMakeLists.txt  READEME.md
tutorial/project_root/include/: hello_cuda.h
tutorial/project_root/src/: hello_cuda.cu  main.cu
tutorial/project_root/tests/: test_launch_kernel.cpp
tutorial/vector_sum/: CMakeLists.txt  vector_sum.cu
